--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Welcome to Liamstan!</title>
 </head>
 <body>
-    <h1>Welcome to 6463),!:!2!2!:!</h1>
-    <p>My name is Liam and I develop stupid stuff. Carthagin is the name I give to all my projects before I decide on a name because I bought the domain name carthagin.com for a project that was never finished. Feel free to dm me on insta @liamhornschildbear. </p>
+    <h1>C: Completely</h1>
+    <h1>A: Awesome</h1>
+    <h1>R: Revolutionary</h1>
+    <h1>T: Technology</h1>
+    <h1>H: Harnessing</h1>
+    <h1>A: Amazing</h1>
+    <h1>G: Growth</h1>
+    <h1>I: Innovation</h1>
+    <h1>N: Now</h1>
+    
     <h2>Here are some of my projects:</h2>
     <ul>
         <li><a href="https://web.archive.org/web/20201216222708/https://www.the-angle.org/">TheAngle News</a></li>
