--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Welcome to Liamstan!</title>
 </head>
 <body>
-    <h1>C: Completely</h1>
-    <h1>A: Awesome</h1>
-    <h1>R: Revolutionary</h1>
-    <h1>T: Technology</h1>
-    <h1>H: Harnessing</h1>
-    <h1>A: Amazing</h1>
-    <h1>G: Growth</h1>
-    <h1>I: Innovation</h1>
-    <h1>N: Now</h1>
-    
+    <h1>C: Completely
+A: Awesome
+R: Repository
+T: That
+H: Holds
+A: All
+G: Great
+I: Ideas
+N: Not</h1>
     <h2>Here are some of my projects:</h2>
     <ul>
         <li><a href="https://web.archive.org/web/20201216222708/https://www.the-angle.org/">TheAngle News</a></li>
