--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Welcome to Liamstan!</title>
 </head>
 <body>
-    <h1>C: Completely
-A: Awesome
-R: Repository
-T: That
-H: Holds
-A: All
-G: Great
-I: Ideas
+    <h1>C: Completely<br>
+A: Awesome<br>
+R: Repository<br>
+T: That<br>
+H: Holds<br>
+A: All<br>
+G: Great<br>
+I: Ideas<br>
 N: Not</h1>
     <h2>Here are some of my projects:</h2>
     <ul>
