--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ A: All<br>
 G: Great<br>
 I: Ideas<br>
 N: Not</h1>
-    <h2>Here are some of my projects:</h2>
+    <p>Past projects:</p>
     <ul>
         <li><a href="https://web.archive.org/web/20201216222708/https://www.the-angle.org/">TheAngle News</a></li>
         <li><a href="https://web.archive.org/web/20220221073420/https://edscribe.org/">EdScribe AI Tool for Teachers</a></li>
